<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_img"
    android:paddingTop="?attr/actionBarSize">


    <TextView
        android:id="@id/textView2"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/first_name"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/last_name"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/phone_number"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/type_role"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="@string/role_type"
                android:paddingLeft="20dp"
                android:background="@drawable/input_text_field_styling" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/email"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/password"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:background="@drawable/input_text_field_styling"
                android:hint="@string/confirm_password"
                android:paddingStart="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:background="@drawable/main_btn_styling"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/go_to_sign_in_page"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:onClick="goToSignInAct"/>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/main_btn_styling"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:onClick="goToHome"
        android:padding="10dp"
        android:text="@string/back_to_home"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>